<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PersonActivity"
    tools:showIn="@layout/activity_person">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollPerson"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/nameSurnamePerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/progressBarPerson"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/labelNameSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/user_32"
                android:padding="4dp"
                android:text="@string/nameSurname"
                android:textColor="@android:color/black"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/textNameSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorButtonNormal"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:selectAllOnFocus="false"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/labelEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/email"
                android:padding="4dp"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorControlHighlight"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textWebEmailAddress"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/labelBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/calendar_32"
                android:padding="4dp"
                android:text="@string/birthday"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorButtonNormal"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:spinnersShown="true" />

            <TextView
                android:id="@+id/labelGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/gender_32"
                android:padding="4dp"
                android:text="@string/ww_gender"
                android:textColor="@android:color/black"
                android:textSize="18sp" />


            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?attr/colorButtonNormal"
                android:gravity="center_horizontal"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/male"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/female"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </RadioGroup>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>