<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DataActivity"
    tools:showIn="@layout/activity_data">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/layoutData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="#FFFFFF"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/labelTemperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/temperature_32"
                android:padding="4dp"
                android:text="@string/temperature"
                android:textColor="@android:color/black"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/textTemperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorButtonNormal"
                android:digits="0123456789."
                android:gravity="center_horizontal"
                android:hint="000.0"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/labelHighPreasure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/arrowup_32"
                android:padding="4dp"
                android:text="@string/highBloodPreassure"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/textHighPreasure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorButtonNormal"
                android:digits="0123456789"
                android:gravity="center_horizontal"
                android:hint="000"
                android:inputType="number"
                android:maxLines="3"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/labelLowPreasure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/arrowdown_32"
                android:padding="4dp"
                android:text="@string/lowBloodPreassure"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/textLowPreasure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorButtonNormal"
                android:digits="0123456789"
                android:gravity="center_horizontal"
                android:hint="000"
                android:inputType="number"
                android:maxLength="3"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/labelPuls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/pulse_32"
                android:padding="4dp"
                android:text="@string/pulse"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/textPulse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorButtonNormal"
                android:digits="0123456789"
                android:gravity="center_horizontal"
                android:hint="000"
                android:inputType="number"
                android:maxLength="3"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/labelSugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/candy_32"
                android:padding="4dp"
                android:text="@string/sugar"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/textSugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorButtonNormal"
                android:digits="0123456789."
                android:gravity="center_horizontal"
                android:hint="00.00"
                android:inputType="numberDecimal"
                android:maxLength="4"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>