<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoreActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layoutStore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" >

            <TableLayout
                android:id="@+id/tableStore"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/imageButton10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/w_data"
                        app:srcCompat="@drawable/calendar_32" />

                    <TextView
                        android:id="@+id/date1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="?attr/colorControlHighlight"
                        android:gravity="center_vertical|center_horizontal"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/date2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="?attr/colorControlHighlight"
                        android:gravity="center_vertical|center_horizontal"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:textStyle="bold|italic" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/imageButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/temperature"
                        app:srcCompat="@drawable/temperature_32" />

                    <TextView
                        android:id="@+id/temperature1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:gravity="center_vertical|center_horizontal"
                        android:textColor="@android:color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/temperature2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:gravity="center_vertical|center_horizontal"
                        android:textColor="@android:color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/imageButton7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/highBloodPreassure"
                        app:srcCompat="@drawable/arrowup_32" />

                    <TextView
                        android:id="@+id/high1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:gravity="center_vertical|center_horizontal"
                        android:textColor="@android:color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/high2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:gravity="center_vertical|center_horizontal"
                        android:textColor="@android:color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/imageButton6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/lowBloodPreassure"
                        app:srcCompat="@drawable/arrowdown_32" />

                    <TextView
                        android:id="@+id/low1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:gravity="center_vertical|center_horizontal"
                        android:textColor="@android:color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/low2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:gravity="center_vertical|center_horizontal"
                        android:textColor="@android:color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/imageButton5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/pulse"
                        app:srcCompat="@drawable/pulse_32" />

                    <TextView
                        android:id="@+id/pulse1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:gravity="center_vertical|center_horizontal"
                        android:textColor="@android:color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/pulse2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:gravity="center_vertical|center_horizontal"
                        android:textColor="@android:color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/imageButton9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/sugar"
                        app:srcCompat="@drawable/candy_32" />

                    <TextView
                        android:id="@+id/sugar1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:gravity="center_vertical|center_horizontal"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sugar2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:gravity="center_vertical|center_horizontal"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />


                </TableRow>

                <TableRow
                    android:id="@+id/seek"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill_horizontal"
                    android:gravity="fill_horizontal">

                    <ImageButton
                        android:id="@+id/butLeftEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/background_light"
                        android:contentDescription="LeftEnd"
                        android:onClick="butLeftEnd"
                        app:srcCompat="@drawable/arrowdoubleleft_64" />

                    <ImageButton
                        android:id="@+id/butLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/background_light"
                        android:contentDescription="Left"
                        android:onClick="butLeft"
                        app:srcCompat="@drawable/arrowleft_64" />

                    <ImageButton
                        android:id="@+id/butRight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/background_light"
                        android:contentDescription="Right"
                        android:onClick="butRight"
                        android:visibility="invisible"
                        app:srcCompat="@drawable/arrowright_64" />

                </TableRow>
            </TableLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>